# src/routes/index.ts
@@ -1,14 +1,14 @@
 import { Router } from "express";
 import moviesRouter from "./movies";
-import actorsRouter from "./actors";
-import associationsRouter from "./associations"
+import usersRouter from "./users";
+import reviewsRouter from "./reviews";
 import { swaggerUi, swaggerDocument } from "../swaggerConfig";
 
 const router: Router = Router();
 
 router.use("/movies", moviesRouter);
-router.use("/actors", actorsRouter);
-router.use("/movie-actors", associationsRouter);
+router.use("/users", usersRouter);
+router.use("/reviews", reviewsRouter);
 router.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 export default router;
